# FINAL_PROJECT_BLOQUE_1

./: .gitignore  README.md  demo_parallel_apis.py  demo_video.py  mc_cholesky_varcvar.py  mc_compare_all.py  pyproject.toml  run_copula_test.py  run_demo_portfolio.py  run_mc_bands.py  run_mc_benchmark.py  run_mixed_portfolio.py  run_plot_mc.py  run_test_mc.py
docs/assets/: mc_benchmark_all_methods_report.md
reports/: portfolio.md
src/finlab/: __init__.py  cache.py  cli.py  config.py
src/finlab/extractor/: __init__.py  alphavantage.py  io_utils.py  marketstack.py  twelvedata.py  yahoo.py
src/finlab/models/: __init__.py  candles.py  portfolio.py
